fix: layout issues

--- a/public/css/utilities.css
+++ b/public/css/utilities.css
@@ -76,6 +76,9 @@
 .mb-0 {
   margin-bottom: 0; }
 
+.mb-2 {
+  margin-bottom: 1em; }
+
 .mb-4 {
   margin-bottom: 2em; }
 
